--- a/.classpath
+++ b/.classpath
@@ -5,6 +5,10 @@
 	<classpathentry kind="lib" path="jgoodies-forms-1.8.0.jar" sourcepath="jgoodies-forms-1.8.0-sources.jar"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="C:/Users/asier_000/Desktop/gagawa-1.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/asier_000/Desktop/javahelp-2.0.02.jar"/>
+	<classpathentry kind="lib" path="lib/javahelp-2.0.02.jar"/>
+	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="lib/json-lib-2.4-jdk15.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
