--- a/.project
+++ b/.project
@@ -14,4 +14,11 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>javahelp-2.0.02</name>
+			<type>2</type>
+			<location>C:/Users/asier_000/workspace/Proyecto/lib</location>
+		</link>
+	</linkedResources>
 </projectDescription>
