--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,10 @@
 	<classpathentry kind="lib" path="lib/json-simple-1.1.1.jar"/>
 	<classpathentry kind="lib" path="lib/json-lib-2.4-jdk15.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/xmlworker-5.5.6.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/xmlworker-5.5.6-javadoc.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/xmlworker-5.5.6-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/asier_000/Desktop/itextpdf-5.1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/asier_000/Desktop/jsoup-1.6.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
